Add DTOProperty to common-api and Swagger components.schemas.